FIX: non-void functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 include(AppendCompilerFlags)
 project(Ring-RPQ)
 set(CMAKE_PROJECT_NAME "Ring RPQ")
+set(CMAKE_OSX_ARCHITECTURES x86_64)
 
 #Change to "Debug" when you need it
 set(CMAKE_BUILD_TYPE "Release")
